correct text alignment on icon

--- a/src/style/_section.scss
+++ b/src/style/_section.scss
@@ -45,10 +45,10 @@
   padding: 0px;
   width: 45%;
   max-width: 174px;
+  text-align: center;
   
   span {
     position: relative;
     top: 35px;
-    left: 41px;
   }
 }
